Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
None
-
Can result in unexpected behaviour
-
Fixed mariabackup to report my_close() failures and prevent false success messages when disk space is exhausted.
-
Q2/2026 Server Maintenance
Description
Root Cause: In extra/mariabackup/ds_local.cc, the local_close() function ignored the return value of my_close(). On network filesystems like CIFS/NAS, writes are buffered and the actual flush to disk happens at close() time. When disk is full, write() succeeds but close() fails
with errno 28. The error was printed but not propagated, so mariabackup reported "completed OK!".
Fix:
// Before (line 286): |
my_close(fd, MYF(MY_WME));
|
// After: |
if (my_close(fd, MYF(MY_WME))) |
ret = 1;
|
File: extra/mariabackup/ds_local.cc, function local_close() (line 286)